# send_mail

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
